Fix post body overflow on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1033,6 +1033,10 @@ input[type="submit"] {
 
 /* Markdown */
 
+.md {
+	width: 100%;
+}
+
 .md > *:not(:first-child) {
 	margin-top: 20px;
 }
